--- a/Blinkit/home.css
+++ b/Blinkit/home.css
@@ -1,68 +1,239 @@
+body{
+    margin:0;
+    padding:0;
+    font-family: 'Okra', Helvetica;
+}
+header.header-main-class{   
+     position: fixed;
+     z-index: 100; 
+     height: 13.2vh;
+     background-color: white;
+     padding-top:0.1vh;
+     width: 100%;
+     border-bottom:0.0026vh solid rgb(245, 242, 242) ; 
+
+}
 #Blinkit_top {
-    font-size: 40px;
     display: inline-block;
-    vertical-align: middle;
+    font-size: 3.2vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    border-right:0.0026vh solid rgb(245, 242, 242);       
+    font-family: "Okra", Helvetica;
+    letter-spacing: -0.2vw;
+    position: relative;
+    top:-2vh;
+    padding-top: 4vh;
+    padding-bottom:1.8vh;
+   
+}
+#Blinkit_top a{
+    text-decoration: none;
+}
+#b1{                         /*Blink*/
+    font-weight: bold;
+    color: #f5d000;
+    
 }
 
-#blink {
-    color: #F8CB46;
+#b2 {                        /*it*/
+    font-weight: bold;
+    color: #54b226;
+}
+#address{
+        display: inline-block;
+        margin-left: 1.5vw;
+        text-align: left;
+}
+#timing-id{
+    color: rgb(0, 0, 0);
+    font-weight: 800;
+    font-size: 1.2vw;
+}
+#address-id{                /*Address*/
+    position: relative;
+    top:-1.5vh;
+    font-size:1vw;
+    font-family:Arial, Helvetica, sans-serif;
+}
+input#searchboxid {         /*Search Box*/
+    position: relative;
+  width: 40%;
+  height: 7vh;
+  text-align: left;
+  padding-left: 3vw;
+  margin-left:6.5vw;
+  background-color: rgb(248, 248, 248);
+  background-image: url("search/search-icon.png");
+  background-size:4vh;
+  background-position-y: 1.5vh;
+  background-position-x: 0.4vw;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  border-radius: 0.5vw;
+  background-repeat: no-repeat;
+  padding-top: 1vh;
+  top: -3vh;
+  color:rgb(83, 83, 83)
+}
+#log-id-span
+{
+    margin-top: 4vh;
+    padding-left: 1vw;
+}
+#cart-id-1
+{   
+    position: relative;
+    margin-right: -0.5vw;
+  
 }
 
-#it {
-    color: #318616;
+#cart-id-span
+{   
+    position: relative;
+    right:-1vw;
+    margin-top:3.5vh;
+    /* margin-right: 30vw; */
 }
 
-.nav-links {
+figure {
     display: inline-block;
-    vertical-align: middle;
-}
-
-.nav-links p {
-    display: inline;
-    margin-right: 20px;
-}
-
-.search_id {
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 120px;
-}
-
-.search_id label {
-    font-size: 18px;
-}
-
-#cartid {
-    margin-left: 400px;
-    float: right; /* Float the cart link to the right */
-    margin-top: 10px; /* Adjust vertical alignment */
-    background-color: rgb(130, 223, 9);
-    color: whitesmoke;
-    font-size: 30px;
-}
-
-#search_id {
-    width: 300px;
-    height: 40px;
-    font-size: 18px;
-}
-
-.image-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.image-container figure {
-    width: calc(14.2857% - 10px);
-    margin-bottom: 20px;
-}
-
-.image-container figure img {
-    width: 100%;
-    height: auto;
-}
-
-.image-container figure figcaption {
     text-align: center;
+    margin-right:0.8vw;
+}
+div {
+    text-align: center;
+}
+div.Advertisement-2
+{
+    margin-left: 4.2vw;
+    margin-right: 4vw;
+    overflow-x:scroll;
+    display: flex;
+    margin-bottom: 2vh;
+} 
+div.Advertisement-2{
+     -ms-overflow-style: none;  
+    scrollbar-width: none;  
+} 
+div.Advertisement-2 a
+{
+    margin-right: 1.5vw;
+    
+}
+div.image-container figure{
+    margin-left: 1vw;
+}
+div.PC-add{
+
+    padding-top: 15vh;
+    padding-bottom: 2.5vh;
+    margin-left: 0.3vw;
+}
+#drop-id{
+    position: relative;
+}
+div.option-class-container{                           /*container*/
+    margin-left: 3.8vw;
+    margin-right: 3.8vw;
+    display: flex;
+    overflow-x: scroll;
+    margin-top: 1vh;
+    margin-bottom: -3vh;
+    overflow-y: hidden;
+}
+div.option-class-container{                         /*container scroll bar*/
+    -ms-overflow-style: none;  
+   scrollbar-width: none;  
+} 
+h1.option-heading-class{                         /*heading*/
+    font-size: 2vw;
+    text-align: left;
+    margin-left:3.8vw;
+}
+div.Option-class{                     /*item container*/                    
+    text-align: left;
+    position: relative;
+    border: 0.5px solid rgb(232, 232, 232);
+    border-radius: 8px;
+    margin-bottom: 5vh;
+    margin-right: 1.3vw;
+    min-width: 13vw;
+    height: 48vh;
+
+}
+div.Option-class img.timer-class{     /*timer image*/
+    margin-top: 0vh;
+    margin-left:1.2vw;
+}
+div.Option-class p:not(.original-ruppes){
+    margin-left: 1vw;
+    font-size: 1vh;
+    font-style: bold;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 18px; 
+  height: 36px;
+  margin-bottom: 10vh;
+  color:grey
+}
+div.Option-class p s.old-ruppee{
+    position: relative;
+    top:-5.5vh;
+}
+div.Option-class   p.original-ruppes{
+    margin-left: 1vw;
+    margin-bottom: -1.5vh;
+    margin-right: 1vw;
+    color:black
+}
+div.Option-class  p.product-option-name{
+    margin-left: 1vw;
+    margin-bottom: -2vh;
+    color:black;
+}
+div.Option-class  p.quantity-class{
+   margin-top:4vh;
+   margin-bottom:-2vh;
+   margin-left: 1vw;
+
+}
+div.Option-class p button.add-button-class{       /*Add Button*/
+    position: relative;
+    top:-3vh;
+    margin-left: 8vw;
+    right:1vw;
+    border-radius: 1vh;
+    width: 4.5vw;
+    border: 1px solid rgb(49, 134, 22);
+    height: 31px;
+    color: rgb(49, 134, 22);
+    font-weight: 600;
+    font-size: 13px;
+    font-family: Okra;
+    background-color: rgb(247, 255, 249);
+    border-radius: 0.375rem;
+    height: 5vh;
+}
+img.product-image{                                  /*Product Image*/
+    margin-left: 2vw;
+  
+}       
+.footer-class{                                      /*Footer container*/
+    padding-left:3.5vw;
+    font-family: Okra;
+  font-weight: 600;
+  background-color:rgb(245, 242, 242);
+ 
+}
+#footer-content{                                     /*Footer content*/
+
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    margin-top: 4vh;
+    margin-bottom:0vh;
+
+}
+
+.Option-class a{
+    text-decoration: none;
 }
